--- a/RPS.html
+++ b/RPS.html
@@ -8,6 +8,7 @@
       
       body{
         margin: 0px;
+        background-color: rgb(112, 112, 155);
       }
       div{
         width: 800px;
